# myDogDemo

./: README.md
src/face_light_sdk_nano/: CMakeLists.txt  package.xml
src/face_light_sdk_nano/faceLightMqtt/: faceLightMqtt.sh
src/face_light_sdk_nano/faceLightServer/: faceLightServer  faceLightServer.sh  run.sh
src/face_light_sdk_nano/include/: FaceLightClient.h
src/face_light_sdk_nano/src/: main.cpp
src/paddle_detection/: CMakeLists.txt  package.xml
src/paddle_detection/msg/: signal.msg
src/paddle_detection/src/: jde_detector.cc  keypoint_detector.cc  main.cc  main_jde.cc  main_keypoint.cc  object_detector.cc
src/robot_voice/: CMakeLists.txt  package.xml
src/robot_voice/launch/: voice_control.launch
src/robot_voice/scripts/: gbktoutf.py
src/robot_voice/src/: iat_publish.cpp  tts_subscribe.cpp  voice_control.cpp
src/unitree_legged_real/launch/: keyboard_control.launch
src/unitree_legged_real/src/exe/: control_via_keyboard.cpp  twist_sub.cpp
src/unitree_legged_sdk-master/: CMakeLists.txt
